Fix a tag bleed, remove CTA

--- a/style.css
+++ b/style.css
@@ -61,29 +61,6 @@ body {
   margin-top: 40px;
 }
 
-.cta { /* basically looks like a button */
-  display: inline-block;
-  padding: 1rem 2rem;
-  border-radius: 5px;
-  margin: 40px auto;
-  color: #fbfbfb;
-  background: #002BB8; /* blue */
-  text-decoration: none;
-  cursor: pointer;
-  font-family: 'Roboto', sans-serif;
-  text-align: center;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: background 250ms ease-in-out,
-              transform 150ms ease;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
-
-.cta:hover, .cta:focus, .cta:active {
-    background: #0034E0;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
-
 .gridCenter {
   justify-self: center;
 }
